--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,9 @@
 {
   "short_name": "Ses Ara",
   "name": "Reşad Halife Ses Kayıtlarında Kelime Ara",
+  "orientation": "portrait",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
       "src": "/favicon.ico",
@@ -18,8 +21,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "splash_pages": null
 }
