--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
   "start_url": ".",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "/logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo-large.png", 
+      "src": "logo-large.png", 
       "type": "image/png",
       "sizes": "512x512"
     }
