--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,21 +2,21 @@
   "short_name": "Ses Ara",
   "name": "Reşad Halife Ses Kayıtlarında Kelime Ara",
   "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "/subtitle-searcher/",
+  "start_url": ".",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "/logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo-large.png", 
+      "src": "logo-large.png", 
       "type": "image/png",
       "sizes": "512x512"
     }
